--- a/css/style.css
+++ b/css/style.css
@@ -521,8 +521,7 @@ textarea {
     height: 5rem;
     border-radius: 50px;
     overflow: hidden;
-    margin-right: 1.5rem;
-    background: #0062b9; }
+    margin-right: 1.5rem; }
     @media only screen and (max-width: 56.25em) {
       .header__logo-img-cont {
         width: 4.5rem;
